fix: header conditional buttons, extra padding in UseYourProfile comp removal, container fix

--- a/src/components/landing-page/LandingContainer/LandingContainer.module.scss
+++ b/src/components/landing-page/LandingContainer/LandingContainer.module.scss
@@ -2,8 +2,9 @@
   max-width: 1240px; //figma width
   margin: 0 auto;
   height: 100%;
+  padding: 0 20px;
   @include mobile {
     padding: 0 16px;
-    min-width: 420px;
+    width: 100%;
   }
 }
