--- a/src/components/landing-page/LandingFooter/LandingFooter.module.scss
+++ b/src/components/landing-page/LandingFooter/LandingFooter.module.scss
@@ -2,6 +2,8 @@
   padding-top: 54px;
   padding-bottom: 67px;
   background-color: #0f1217;
+  padding-left: 20px;
+  padding-right: 20px;
   @include mobile {
     padding-left: 50px;
     padding-right: 50px;
